# Decentralized-File-Storage

./: .gitignore  AUTHOR.md  LICENSE  README.md
backend/: .env.example  Cargo.toml  mock-server.js  package-lock.json  package.json
backend/migrations/: 001_initial.sql
backend/src/: main.rs
backend/src/handlers/: files.rs  health.rs  mod.rs  users.rs
backend/src/models/: file.rs  mod.rs  share.rs  user.rs
backend/src/services/: file_service.rs  user_service.rs
database/: setup.sh
docs/: API.md  ARCHITECTURE.md
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: FileDetailsModal.tsx  FileList.tsx  FileListSimple.tsx  FileUpload.tsx  PhantomWalletConnect.tsx  SimpleWalletConnect.tsx  WalletConnect.tsx  WalletProvider.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  arweave.ts
