[package]
name = "decentralized-file-storage-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.7"
actix-cors = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.9", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9.3"
bcrypt = "0.15"
anyhow = "1.0"